--- a/guards/src/app/shared/home/home.component.html
+++ b/guards/src/app/shared/home/home.component.html
@@ -1,1 +1,8 @@
-<p>home works!</p>
+<a routerLink="account" [queryParams]="{ account: 'admin', password: '4321' }"
+  >Account False</a
+>
+<br />
+<a routerLink="account" [queryParams]="{ account: 'admin', password: '1234' }"
+  >Account True</a
+>
+<h1>Home</h1>
